# Artificial-Intelligence-Deep-Learning-Machine-Learning-Tutorials

./: .gitignore  DataScience-Learning-Path.md  LICENSE  README.md  TensorFlow_2_0_in_10_minutes.ipynb
BLORE/: CNN.ipynb
Beginners_Guide_Math_LinAlg/: Math Behind ML.ipynb
C++_Notebook/: Class.ipynb  Delete.ipynb  First C++Notebook.ipynb  Learning C++ on the fly.ipynb  Pointers.ipynb  Reference.ipynb  Vector Array List Tuple.ipynb
Math_Tutorials/: ReadMe.md
Projects/: __init__.py
Setting_Up_GPU/: reinstall_nvidia_CUDA_cuDNN.sh
aws/: aws.ipynb
commands/: linux.ipynb  misc.ipynb
deep-learning/: Generelizing Mutiple Layers.ipynb  Implementing a simple neural network - Linear Regression.ipynb  Installing-DeepLearning-Machine-GoogleCloud.md  Logistic & Softmax Function in Neural Networks.ipynb  Logistic Regression.ipynb  Neural Networks Hidden Layer.ipynb  README.md  Vectorization.ipynb  WTF are Neural Networks Anyways?.ipynb  Which is Faster - Numpy or TensorFlow?.ipynb
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CppCheckSuppressions.txt  README.md  launch_gym_server.py
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/example/: CMakeLists.txt  communicator.cpp  communicator.h  gym_client.cpp  requests.h
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/gym_server/: envs.py  messages.py  server.py  zmq_client.py
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/include/cpprl/: cpprl.h  spaces.h  storage.h
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/include/cpprl/algorithms/: a2c.h  algorithm.h  ppo.h
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/include/cpprl/distributions/: categorical.h  distribution.h
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/include/cpprl/generators/: feed_forward_generator.h  generator.h  recurrent_generator.h
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/include/cpprl/model/: cnn_base.h  mlp_base.h  model_utils.h  nn_base.h  output_layers.h  policy.h
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/src/: CMakeLists.txt  storage.cpp
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/src/algorithms/: CMakeLists.txt  a2c.cpp  ppo.cpp
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/src/distributions/: CMakeLists.txt  categorical.cpp
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/src/generators/: CMakeLists.txt  feed_forward_generator.cpp  recurrent_generator.cpp
deep-learning/Deep-Reinforcement-Learning-Complete-Collection/PyTorch-cpp/src/model/: CMakeLists.txt  cnn_base.cpp  mlp_base.cpp  model_utils.cpp  nn_base.cpp  output_layers.cpp  policy.cpp
earth-sciences/: Analyzing Whale Tracks.ipynb
github/: Practicing Markup in iPYNB.ipynb  Practicing writing stuff I like -- ANN, Information-Theory, Capsules and more.ipynb
growth-marketing-churn-analyses/: churndata.py  data-exercises.ipynb  profit.ipynb  util.py
images/: .README_1200x800.gif.icloud
java/: Christmas Tree.ipynb  Polyglot.ipynb
java/java2py/antlr-3.1.3/runtime/C/: AUTHORS  C.sln  C.vcproj  C.vcproj.vspscc  COPYING  ChangeLog  Cvs2005.sln  Cvs2005.vcproj  Makefile.am  NEWS  README  configure.ac  doxyfile
java/java2py/antlr-3.1.3/runtime/C/doxygen/: atsections.dox  build.dox  buildrec.dox  changes31.dox  doxygengroups.dox  generate.dox  interop.dox  knownissues.dox  mainpage.dox  runtime.dox  using.dox
java/java2py/antlr-3.1.3/runtime/C/include/: antlr3.h  antlr3baserecognizer.h  antlr3basetree.h  antlr3basetreeadaptor.h  antlr3bitset.h  antlr3collections.h  antlr3commontoken.h  antlr3commontree.h  antlr3commontreeadaptor.h  antlr3commontreenodestream.h  antlr3convertutf.h  antlr3cyclicdfa.h  antlr3debugeventlistener.h  antlr3defs.h  antlr3encodings.h  antlr3errors.h  antlr3exception.h  antlr3filestream.h  antlr3input.h  antlr3interfaces.h  antlr3intstream.h  antlr3lexer.h  antlr3memory.h  antlr3parser.h  antlr3parsetree.h  antlr3recognizersharedstate.h  antlr3rewritestreams.h  antlr3string.h  antlr3stringstream.h  antlr3tokenstream.h  antlr3treeparser.h
java/java2py/antlr-3.1.3/runtime/C/src/: antlr3baserecognizer.c  antlr3basetree.c  antlr3basetreeadaptor.c  antlr3bitset.c  antlr3collections.c  antlr3commontoken.c  antlr3commontree.c  antlr3commontreeadaptor.c  antlr3commontreenodestream.c  antlr3convertutf.c  antlr3cyclicdfa.c  antlr3debughandlers.c  antlr3encodings.c  antlr3exception.c  antlr3filestream.c  antlr3inputstream.c  antlr3intstream.c  antlr3lexer.c  antlr3parser.c  antlr3rewritestreams.c  antlr3string.c  antlr3stringstream.c  antlr3tokenstream.c  antlr3treeparser.c  antlr3ucs2inputstream.c
java/java2py/antlr-3.1.3/runtime/C/vsrulefiles/: antlr3lexer.rules  antlr3lexerandparser.rules  antlr3parser.rules  antlr3treeparser.rules
julia/: Basic+Programming+and+Mathematics+Stuff.ipynb  CUDA-GPU.ipynb  Collections_v1.0.3.ipynb  Exploring+Data+Using+Julia.ipynb  Functions_V1.0.3.ipynb  Julia-MNIST.ipynb  My First Julia Notebook.ipynb  My+First+Julia+Notebook.ipynb
kaggle/: titanic.ipynb
machine-learning/: .Applied Machine Learning TextBook.pdf.icloud  ML-Study-Path.md
mapreduce/: mapreduce-python.ipynb  mr_s3_log_parser.py  test_mr_s3_log_parser.py
matplotlib/: .04.13-Geographic-Data-With-Basemap.ipynb.icloud  04.00-Introduction-To-Matplotlib.ipynb  04.01-Simple-Line-Plots.ipynb  04.02-Simple-Scatter-Plots.ipynb  04.03-Errorbars.ipynb  04.04-Density-and-Contour-Plots.ipynb  04.05-Histograms-and-Binnings.ipynb  04.06-Customizing-Legends.ipynb  04.07-Customizing-Colorbars.ipynb  04.08-Multiple-Subplots.ipynb  04.09-Text-and-Annotation.ipynb  04.10-Customizing-Ticks.ipynb  04.11-Settings-and-Stylesheets.ipynb  04.12-Three-Dimensional-Plotting.ipynb  04.13-Geographic-Data-With-Basemap.ipynb  04.14-Visualization-With-Seaborn.ipynb  04.15-Further-Resources.ipynb  (+4 more)
(+3264 files in other folders)
